# netmon

./: .gitignore  Cargo.toml  index.html  optimized-leaping-manatee.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/netmon-app/: Cargo.toml  tauri.conf.json
crates/netmon-app/capabilities/: default.json
crates/netmon-app/src/: auth.rs  cloud_commands.rs  commands.rs  db.rs  http_probe.rs  load_test.rs  main.rs  mtr.rs  ping.rs  report.rs  sync.rs  tray.rs  types.rs
scripts/: diagnose-db.mjs
src/: api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: db_check.rs
src-tauri/src/: commands.rs  db.rs  main.rs  mtr.rs  types.rs
src/components/: Dashboard.tsx  HopTable.tsx  LatencyChart.tsx  LossChart.tsx
src/hooks/: useDashboard.ts
