[package]
name = "netmon"
version = "1.0.0"
edition = "2021"

[features]
# Enabled by `tauri build`; embeds the frontend assets instead of loading the dev server.
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "2.10", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.4"
tauri-plugin-autostart = "2.5"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.38", features = ["bundled"] }
image = { version = "0.25", default-features = false, features = ["png"] }
dns-lookup = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_System_IO",
] }

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
